Update index to personalize

--- a/index.html
+++ b/index.html
@@ -11,25 +11,17 @@
 <body>
   <div class="jumbotron">
     <div class="container">
-      <h2>drat: R Repositories made easy</h2>
+      <h2>Brooke Anderson's drat R Repository</h2>
     </div>
   </div><!-- /.umbotron -->
   <div class="row"> &nbsp; </div>
   <div class="container">
     <div class="row">
       <div class="col-md-6">
-        <h4><a href="https://github.com/eddelbuettel/drat/tree/gh-pages/src/contrib">Current Content of Drat Repo</a></h4>
-        <div class="row"> &nbsp; </div>
-        <h4>Vignettes about Drat</h3>
-        <ul class="list-group">
-          <li class="list-group-item"><a href="DratFAQ.html">Drat FAQ</a></li>
-          <li class="list-group-item"><a href="DratForPackageUsers.html">Drat for Package Users</a></li>
-          <li class="list-group-item"><a href="DratForPackageAuthors.html">Drat for Package Authors</a></li>
-          <li class="list-group-item"><a href="WhyDrat.html">Why Drat?</a> guest post</li>
-          <li class="list-group-item"><a href="CombiningDratAndTravis.html">Combining Drat and Travis CI</a> guest post</li>
-        </ul>
+        <h4><a href="https://github.com/geanders/drat/tree/gh-pages/src/contrib">Current Content of this Drat Repo</a></h4>
         <div class="row"> &nbsp; </div>
         <h4>Source for Drat Code</h3>
+        <p>This repository is build using Dirk Eddelbuettel's awesome drat package. Find out more by checking out the source for that at the following links.</p>
         <ul class="list-group">
           <li class="list-group-item"><a href="http://dirk.eddelbuettel.com/code/drat.html">Package page</a></li>
           <li class="list-group-item"><a href="https://github.com/eddelbuettel/drat">GitHub repo</a></li>
@@ -37,9 +29,9 @@
         </ul>
       </div>
       <div class="col-md-6">
-        <center>
+        <!-- <center>
         <img src="http://i.imgur.com/dXKsSSK.jpg">
-        </center>
+        </center> -->
       </div>
     </div>
    </div>
