--- a/index.html
+++ b/index.html
@@ -38,13 +38,8 @@
    <div class="row"> &nbsp; </div>
    <footer class="footer">
      <div class="container">
-       <a href="http://twitter.com/eddelbuettel"><i class="icon-twitter"></i></a>
-       <a href="https://plus.google.com/+DirkEddelbuettel"><i class="icon-google-plus"></i></a>
-       <a href="https://github.com/eddelbuettel"><i class="icon-github"></i></a>
-       <!-- <a href="http://stackoverflow.com/users/143305/dirk-eddelbuettel"><i class="icon-stackexchange"></i></a> -->
-       <a href="http://www.linkedin.com/in/dirkeddelbuettel/"><i class="icon-linkedin"></i></a>
-       <a href="http://dirk.eddelbuettel.com"><i class="icon-home"></i>
-       <a href="http://dirk.eddelbuettel.com/blog/index.rss"><i class="icon-rss"></i></a>
+       <a href="http://twitter.com/gbwanderson"><i class="icon-twitter"></i></a>
+       <a href="https://github.com/geanders"><i class="icon-github"></i></a>
      </div>
    </footer>
 </body>
